[package]
name = "mdbook-python"
version = "0.12.9"
authors = ["Janis Huser"]
description = "mdbook preprocessor to add mermaid support"
license = "MPL-2.0"
homepage = "https://github.com/JanisHuser/mdbook-pyscript"
repository = "https://github.com/JanisHuser/mdbook-pyscript"
edition = "2018"

[dependencies]
mdbook = { version = "0.4.21", default-features = false }
pulldown-cmark = { version = "0.9.0", default-features = false }
env_logger = "0.10.0"
log = "0.4.11"
clap = { version = "4.0.29", features = ["cargo"] }
serde_json = "1.0.57"
toml_edit = { version = "0.15.0", default-features = false }

[dev-dependencies]
assert_cmd = "2.0.0"
pretty_assertions = "1.0.0"
tempfile = "3.3.0"
